# Bottles

./: com.usebottles.bottles.pypi-deps.yaml  com.usebottles.bottles.yml  meson.build  requirements.txt
daemon/: bottlesd.in.py  meson.build
data/: com.usebottles.bottles.Daemon.desktop.in  com.usebottles.bottles.Daemon.service.in  meson.build
